--- a/sections/contact.liquid
+++ b/sections/contact.liquid
@@ -9,7 +9,7 @@
   }
 </style>
 
-<div {% render 'section-properties' %}>
+<div {% render 'section-properties' %} id="request-quote-scroll">
   {%- assign text_position = section.settings.text_position -%}
 
   <div class="section-stack {% if text_position != 'center' %}section-stack--horizontal{% else %}section-stack--center{% endif %} {% if text_position == 'end' %}section-stack--reverse{% endif %}">
