css files linking method changed

--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -22,7 +22,7 @@ Supported variables
 * text_alignment: can be "center". If nothing is set, the theme uses the default product card setting
 {%- endcomment -%}
 
-<link rel="stylesheet" href="{{ 'product-card.css' | asset_url }}">
+{{- 'product-card.css' | asset_url | stylesheet_tag: preload: true -}}
 
 
 {%- assign show_rating = show_rating | default: settings.show_product_rating, allow_false: true -%}
