--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -53,7 +53,7 @@ NOTE TO DEVELOPERS: welcome to Impact theme! We hope that you will enjoy editing
     {{ content_for_header }}
 
     {{- 'theme.css' | asset_url | stylesheet_tag: preload: true -}}
-    <link rel="stylesheet" href="{{ 'custom.css' | asset_url }}">
+    {{- 'custom.css' | asset_url | stylesheet_tag: preload: true -}}
   </head>
 
   <body class="{% if settings.show_page_transition %}page-transition{% endif %} {% if settings.zoom_image_on_hover %}zoom-image--enabled{% endif %}">
