--- a/sections/collection-banner.liquid
+++ b/sections/collection-banner.liquid
@@ -6,7 +6,7 @@
 
 {%- capture collection_header -%}
   {%- if section.settings.show_collection_title -%}
-    <h1 class="{{ section.settings.collection_title_size }}" {% if settings.heading_apparition != 'none' and show_image %}reveal-on-scroll="true"{% endif %}>
+    <h1 class="{{ section.settings.collection_title_size }} hero--banner--text" {% if settings.heading_apparition != 'none' and show_image %}reveal-on-scroll="true"{% endif %}>
       {%- render 'styled-text', content: collection.title, apparition_effect: true -%}
     </h1>
   {%- endif -%}
