popular product border and link added

--- a/assets/contact-us.css
+++ b/assets/contact-us.css
@@ -31,11 +31,17 @@
 
 .multi-column img{
     width: 42px;
+    object-fit: contain;
 }
 
-.multi-column .text-start{
-    border-bottom: 5px solid black;
+.multi-column .text-start a{
+    background: none;
+    border-bottom: 5px solid #000000;
+    transform: scaleX(0); 
+    transition: transform 250ms ease-in-out;
 }
+
+
 
 @media (min-width:699px){
     .section-blends .image-part-wrap h5{
