border radius removed for popup, cart drawer,filter,searchbar

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -24,3 +24,10 @@ li:last-child
         font-size: 26px;
     }
   }
+
+
+/* cart drawer */
+.drawer::part(content){
+  border-radius: unset !important;
+  clip-path: none !important;
+}
