--- a/snippets/mega-menu-horizontal.liquid
+++ b/snippets/mega-menu-horizontal.liquid
@@ -1,5 +1,3 @@
-{{ 'mega-menu.css' | asset_url | stylesheet_tag }}
-
 {%- if link.links.size > 0 -%}
   <style>
     @media screen and (min-width: 1150px) {
@@ -20,7 +18,7 @@
         --mega-menu-nav-gap: {% if mega_menu_block.settings.layout == 'horizontal_center' %}var(--spacing-12){% else %}var(--spacing-16){% endif %};
 
         {% if link.links.size > 4 %}
-          --column-list-max-width: 90%;
+          --column-list-max-width: 100%;
         {% else %}
           --column-list-max-width: max-content;
         {% endif %}
@@ -37,6 +35,35 @@
       #mega-menu-{{ mega_menu_block.id }} {
         --mega-menu-nav-gap: var(--spacing-20);
       }
+    }
+
+    .mega-menu{
+      gap: unset;
+    }
+    @media screen and (min-width: 1500px){
+        #mega-menu-{{ mega_menu_block.id }} {
+            --column-list-max-width: 95%;
+        }
+    }
+    @media screen and (min-width: 1652px){
+        #mega-menu-{{ mega_menu_block.id }} {
+            --column-list-max-width: 90%;
+        }
+    }
+    @media screen and (min-width: 1400px) and (max-width: 1425px) {
+        #mega-menu-{{ mega_menu_block.id }} {
+            --mega-menu-nav-gap: var(--spacing-10);
+        }
+    }
+    @media screen and (min-width: 1275px) and (max-width: 1400px)  {
+        #mega-menu-{{ mega_menu_block.id }} {
+            --column-list-max-width: 95%;
+        }
+    }
+    @media screen and (max-width: 1275px) {
+        #mega-menu-{{ mega_menu_block.id }} {
+            --mega-menu-nav-gap: var(--spacing-5);
+        }
     }
   </style>
 {%- endif -%}
