--- a/snippets/icon.liquid
+++ b/snippets/icon.liquid
@@ -83,21 +83,20 @@
       </svg>
 
     {%- when 'account' -%}
-      <svg role="presentation" stroke-width="{{ stroke_width | default: settings.icon_stroke_width }}" focusable="false" width="{{ width | default: 22 }}" height="{{ height | default: 22 }}" class="{{ class | strip }}" viewBox="0 0 22 22">
-        <circle cx="11" cy="7" r="4" fill="none" stroke="currentColor"></circle>
-        <path d="M3.5 19c1.421-2.974 4.247-5 7.5-5s6.079 2.026 7.5 5" fill="none" stroke="currentColor" stroke-linecap="round"></path>
+      <svg role="presentation" stroke-width="{{ stroke_width | default: settings.icon_stroke_width }}" focusable="false" width="{{ width | default: 22 }}" height="{{ height | default: 22 }}" class="{{ class | strip }}" viewBox="0 0 60 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M29.7203 29.0844C37.8026 29.0844 44.3863 22.5564 44.3863 14.5422C44.3863 6.52807 37.8026 0 29.7203 0C21.6379 0 15.0542 6.52807 15.0542 14.5422C15.0542 22.5564 21.6379 29.0844 29.7203 29.0844ZM29.7203 5.30738C34.8587 5.30738 39.0337 9.44713 39.0337 14.5422C39.0337 19.6373 34.8587 23.7771 29.7203 23.7771C24.5818 23.7771 20.4068 19.6373 20.4068 14.5422C20.4068 9.44713 24.5818 5.30738 29.7203 5.30738Z" fill="black"/>
+        <path d="M46.554 29.3031C45.2293 28.7724 43.7038 28.9847 42.5396 29.8604C36.8659 34.2125 30.1618 34.0533 30.0012 34.0665H29.6265C29.6265 34.0665 22.9224 34.2655 17.1818 29.8604C16.031 28.9714 14.4921 28.7591 13.1673 29.3031C9.20643 30.9086 0 36.0833 0 49.1793C0 54.3009 2.66291 64.0001 12.7124 64.0001H46.9956C57.0451 64.0001 59.708 54.3142 59.708 49.1793C59.708 37.7021 51.0903 31.1607 46.5407 29.3031H46.554ZM47.009 58.6928H12.7124C5.62021 58.6928 5.35258 50.1479 5.35258 49.1793C5.35258 40.2231 10.7988 36.2027 14.5055 34.5176C21.5976 39.6127 29.4659 39.4004 29.7202 39.3872H29.8941C30.2421 39.3872 38.0836 39.626 45.1757 34.5442C47.3837 35.6853 54.3554 40.0373 54.3554 49.1925C54.3554 49.5773 54.2751 58.706 46.9956 58.706L47.009 58.6928Z" fill="black"/>
       </svg>
 
     {%- when 'search' -%}
-      <svg role="presentation" stroke-width="{{ stroke_width | default: settings.icon_stroke_width }}" focusable="false" width="{{ width | default: 22 }}" height="{{ height | default: 22 }}" class="{{ class | strip }}" viewBox="0 0 22 22">
-        <circle cx="11" cy="10" r="7" fill="none" stroke="currentColor"></circle>
-        <path d="m16 15 3 3" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path>
-      </svg>
-
+      <svg role="presentation" stroke-width="{{ stroke_width | default: settings.icon_stroke_width }}" focusable="false" width="{{ width | default: 22 }}" height="{{ height | default: 22 }}" class="{{ class | strip }}" viewBox="0 0 62 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M61.2199 59.5412L50.8474 49.1505C55.6367 43.9226 58.565 36.9607 58.565 29.3339C58.565 13.1546 45.4334 0 29.2825 0C13.1316 0 0 13.1546 0 29.3339C0 45.5131 13.1316 58.6678 29.2825 58.6678C35.9329 58.6678 42.0757 56.4253 46.9951 52.6706L57.5368 63.2308C58.0444 63.7393 58.7081 64 59.3719 64C60.0356 64 60.6993 63.7393 61.2069 63.2308C62.222 62.2139 62.222 60.5582 61.2069 59.5412H61.2199ZM5.20578 29.3339C5.20578 16.0359 16.0078 5.21491 29.2825 5.21491C42.5572 5.21491 53.3592 16.0359 53.3592 29.3339C53.3592 42.6319 42.5572 53.4528 29.2825 53.4528C16.0078 53.4528 5.20578 42.6319 5.20578 29.3339Z" fill="black"/>
+        </svg>
+        
     {%- when 'cart' -%}
-      <svg role="presentation" stroke-width="{{ stroke_width | default: settings.icon_stroke_width }}" focusable="false" width="{{ width | default: 22 }}" height="{{ height | default: 22 }}" class="{{ class | strip }}" viewBox="0 0 22 22">
-        <path d="M11 7H3.577A2 2 0 0 0 1.64 9.497l2.051 8A2 2 0 0 0 5.63 19H16.37a2 2 0 0 0 1.937-1.503l2.052-8A2 2 0 0 0 18.422 7H11Zm0 0V1" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path>
-      </svg>
+      <svg role="presentation" stroke-width="{{ stroke_width | default: settings.icon_stroke_width }}" focusable="false" width="{{ width | default: 22 }}" height="{{ height | default: 22 }}" class="{{ class | strip }}" viewBox="0 0 78 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M75.1149 10.9899C73.2374 8.61513 70.4277 7.25624 67.3917 7.25624H17.4571L17.2308 6.24036C16.4318 2.62544 13.1428 0 9.40102 0H2.66318C1.19843 0 0 1.18738 0 2.63863C0 4.08988 1.19843 5.27726 2.66318 5.27726H9.40102C10.6527 5.27726 11.7579 6.1612 12.0243 7.37497L12.7034 10.449L20.3999 46.0441L18.1629 52.1525C17.1642 54.8571 17.577 57.8784 19.2415 60.24C20.906 62.6015 23.6357 64 26.5386 64H63.2505C64.7152 64 65.9137 62.8126 65.9137 61.3614C65.9137 59.9101 64.7152 58.7227 63.2505 58.7227H26.5386C25.3535 58.7227 24.2882 58.1686 23.6091 57.2055C22.93 56.2424 22.7702 55.055 23.183 53.96L24.8208 49.4875H61.6659C66.18 49.4875 70.0948 46.4531 71.1867 42.1258L76.9126 19.3412C77.645 16.4255 76.9925 13.3779 75.1283 11.0163L75.1149 10.9899ZM71.7327 18.0482L66.0069 40.8328C65.5142 42.8118 63.7165 44.1971 61.6526 44.1971H25.4467L18.6023 12.5335H67.3784C68.7633 12.5335 70.0549 13.1536 70.9071 14.2354C71.7593 15.3173 72.0656 16.7025 71.7194 18.035L71.7327 18.0482Z" fill="black"/>
+        </svg>        
 
     {%- when 'quick-buy-cart' -%}
       <svg role="presentation" fill="none" stroke-width="{{ stroke_width | default: settings.icon_stroke_width }}" focusable="false" width="{{ width | default: 16 }}" height="{{ height | default: 14 }}" class="{{ class | strip }}" viewBox="0 0 16 14">
