--- a/sections/media-with-text.liquid
+++ b/sections/media-with-text.liquid
@@ -11,6 +11,9 @@ CSS
     --media-with-text-gap: {% if section.settings.spacing == 'none' %}0{% else %}var(--grid-gutter){% endif %};
     --media-with-text-item-grid-template: "media" "content" / auto;
   }
+  .section--{{ section.id }} .section{
+      padding-block-start: 0 !important;
+  }
 
   @media screen and (min-width: 1000px) {
     #shopify-section-{{ section.id }} {
@@ -39,7 +42,7 @@ CSS
 LIQUID
 ------------------------------------------------------------------------------------------------------------------------
 {%- endcomment -%}
-
+<div class="section--{{ section.id }}">
 <div {% render 'section-properties' %}>
   <media-with-text class="media-with-text {% if section.settings.spacing == 'none' %}{% if section.settings.full_width %}full-bleed{% else %}rounded{% endif %}{% endif %}">
     {%- for block in section.blocks -%}
@@ -129,7 +132,7 @@ LIQUID
     {%- endfor -%}
   </media-with-text>
 </div>
-
+</div>
 {% schema %}
 {
   "name": "Media with text",
