for section padding customization added

--- a/sections/media-grid.liquid
+++ b/sections/media-grid.liquid
@@ -10,6 +10,10 @@ CSS
   #shopify-section-{{ section.id }} {
     --media-grid-row-height: {{ section.settings.mobile_row_height }}px;
   }
+  .section--{{ section.id }} .section  {
+    padding-block-start: {{ section.settings.media_sec_top }}px ;
+    padding-block-end : {{ section.settings.media_sec_btm }}px;
+  }
 
   @media screen and (min-width: 700px) {
     #shopify-section-{{ section.id }} {
@@ -42,6 +46,8 @@ LIQUID
 ------------------------------------------------------------------------------------------------------------------------
 {%- endcomment -%}
 
+
+<div class="section--{{ section.id }}">
 <div {% render 'section-properties', narrow: section.settings.reduce_width %}>
   <media-grid class="media-grid">
     {%- for block in section.blocks -%}
@@ -106,6 +112,7 @@ LIQUID
     {%- endfor -%}
   </media-grid>
 </div>
+</div>
 
 {% schema %}
 {
@@ -116,6 +123,7 @@ LIQUID
     "templates": ["password"],
     "groups": ["header", "custom.overlay"]
   },
+    
   "max_blocks": 15,
   "blocks": [
     {
@@ -594,6 +602,26 @@ LIQUID
     }
   ],
   "settings": [
+    {
+      "type": "range",
+      "id": "media_sec_top",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "unit": "px",
+      "label": "Section Padding Start",
+      "default": 1
+    },
+    {
+      "type": "range",
+      "id": "media_sec_btm",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "unit": "px",
+      "label": "Section Padding bottom",
+      "default": 1
+    },
     {
       "type": "checkbox",
       "id": "full_width",
