--- a/snippets/pagination.liquid
+++ b/snippets/pagination.liquid
@@ -16,32 +16,38 @@ Supported variables
 * class: extra class being added to the container
 {%- endcomment -%}
 
+{%- capture next_page_url -%}
+  {{ paginate.next.url }}{{ hash }}
+{%- endcapture -%}
+
 {%- if paginate.pages > 1 -%}
-  <nav class="{{ class }} pagination" role="navigation" aria-label="{{ 'general.accessibility.pagination' | t }}">
-    {%- if paginate.previous.is_link -%}
-      {%- assign previous_page = paginate.current_page | minus: 1 -%}
+  {%- unless enable_infinite_scroll -%}
+    <nav class="{{ class }} pagination" role="navigation" aria-label="{{ 'general.accessibility.pagination' | t }}">
+      {%- if paginate.previous.is_link -%}
+        {%- assign previous_page = paginate.current_page | minus: 1 -%}
 
-      <a class="pagination__item group" {% if facet %}is="facet-link"{% endif %} rel="prev" aria-label="{{ 'general.accessibility.go_to_page' | t: index: previous_page }}" href="{{ paginate.previous.url }}{{ hash }}">
-        <span class="animated-arrow animated-arrow--reverse"></span>
-      </a>
-    {%- else -%}
-      <span class="pagination__item pagination__item--disabled">
-        <span class="animated-arrow animated-arrow--reverse"></span>
-      </span>
-    {%- endif -%}
+        <a class="pagination__item group" {% if facet %}is="facet-link"{% endif %} rel="prev" aria-label="{{ 'general.accessibility.go_to_page' | t: index: previous_page }}" href="{{ paginate.previous.url }}{{ hash }}">
+          <span class="animated-arrow animated-arrow--reverse"></span>
+        </a>
+      {%- else -%}
+        <span class="pagination__item pagination__item--disabled">
+          <span class="animated-arrow animated-arrow--reverse"></span>
+        </span>
+      {%- endif -%}
 
-    <span class="pagination__current">{{ paginate.current_page }}&nbsp;&nbsp;/&nbsp;&nbsp;{{ paginate.pages }}</span>
+      <span class="pagination__current">{{ paginate.current_page }}&nbsp;&nbsp;/&nbsp;&nbsp;{{ paginate.pages }}</span>
 
-    {%- if paginate.next.is_link -%}
-      {%- assign next_page = paginate.current_page | plus: 1 -%}
+      {%- if paginate.next.is_link -%}
+        {%- assign next_page = paginate.current_page | plus: 1 -%}
 
-      <a class="pagination__item group" {% if facet %}is="facet-link"{% endif %} rel="next" aria-label="{{ 'general.accessibility.go_to_page' | t: index: next_page }}" href="{{ paginate.next.url }}{{ hash }}">
-        <span class="animated-arrow"></span>
-      </a>
-    {%- else -%}
-      <span class="pagination__item pagination__item--disabled">
-        <span class="animated-arrow"></span>
-      </span>
-    {%- endif -%}
-  </nav>
+        <a class="pagination__item group" {% if facet %}is="facet-link"{% endif %} rel="next" aria-label="{{ 'general.accessibility.go_to_page' | t: index: next_page }}" href="{{ next_page_url }}">
+          <span class="animated-arrow"></span>
+        </a>
+      {%- else -%}
+        <span class="pagination__item pagination__item--disabled">
+          <span class="animated-arrow"></span>
+        </span>
+      {%- endif -%}
+    </nav>
+  {%- endunless -%}
 {%- endif -%}
