--- a/sections/main-collection.liquid
+++ b/sections/main-collection.liquid
@@ -77,7 +77,7 @@
     </div>
   {%- else -%}
     {%- paginate collection.products by section.settings.products_per_page -%}
-      <div class="collection {% if show_filters %}collection--filters-{{ section.settings.filter_layout | escape }}{% endif %}">
+      <collection-items class="collection {% if show_filters %}collection--filters-{{ section.settings.filter_layout | escape }}{% endif %}" {%- if paginate.pages > 1 -%}data-next-page="{{ paginate.next.url }}{{ hash }}"{%- endif -%}>
         {%- if show_filters or section.settings.show_sort_by -%}
           {%- comment -%}
           IMPLEMENTATION NOTE: we have to output the drawer no matter what, as it is used on mobile (all the time) or desktop (when in drawer mode)
@@ -210,8 +210,8 @@
           {%- endif -%}
         </div>
 
-        {%- render 'pagination', paginate: paginate, facet: true, class: 'collection__pagination' -%}
-      </div>
+        {%- render 'pagination', paginate: paginate, facet: true, class: 'collection__pagination', enable_infinite_scroll: section.settings.enable_infinite_scroll -%}
+      </collection-items>
     {%- endpaginate -%}
   {%- endif -%}
 </div>
@@ -631,6 +631,12 @@
       "id": "show_sort_by",
       "label": "Show sort by",
       "default": true
+    },
+    {
+      "type": "checkbox",
+      "id": "enable_infinite_scroll",
+      "label": "Enable Infinite Scroll",
+      "default": false
     },
     {
       "type": "checkbox",
